# Chneowave

./: .gitignore  ANALYSE_PROBLEMES_AFFICHAGE_CHNEOWAVE.md  ARCHITECTURE_NOUVELLE_INTERFACE.md  AUDIT_CHNEOWAVE_2025.md  AUDIT_COMPLET_CHNEOWAVE_2025.md  AUDIT_EXHAUSTIF_CHNEOWAVE.md  AUDIT_INTERFACE.md  AUDIT_INTERFACE_DETAILLE.md  AUDIT_TECHNIQUE_EXHAUSTIF_CHNEOWAVE.md  Analyse Approfondie et Prompt de Correction Interf.md  CHECKLIST_ACCEPTATION_FINALE.md  CHNeoWave.bat  CHNeoWave.vbs  CLEANUP_REPORT.md  CONTRATS_TECHNIQUES_ADAPTATEURS.md  DESIGN_GUIDE_2025.md  DESIGN_VALIDATION_REPORT.md  DIAGNOSTIC_COMPLET_INTERFACE.md  DIAGNOSTIC_FINAL_RESOLUTION.md  DIAGNOSTIC_REFONTE_2025.md  ETAPE_3_PLAN_TESTS_COUVERTURE.md  FIGMA_MCP_GUIDE.md  GUIDE_DEPLOIEMENT_FINAL.md  GUIDE_LANCEMENT_CHNEOWAVE.md  GUIDE_LANCEMENT_FINAL.md  GUIDE_LANCEMENT_RAPIDE.md  GUIDE_MAIN_UNIFIE.md  GUIDE_RESOLUTION_PROBLEMES_AFFICHAGE.md  GUIDE_UTILISATION.md  INSTALL.md  INSTALLATION_REPORT.md  INVENTAIRE_MOCKS_COMPLET.md  MATRICE_CORRESPONDANCE_INTEGRATION.md  MATRICE_CORRESPONDANCE_INTEGRATION_COMPLETE.md  MCP_SOLUTIONS.md  MEMORY_LOG.md  MISSION_LOG.md  PHASE5_FINITIONS_RAPPORT.md  PLAN_ACTION_CHNEOWAVE.md  PLAN_ACTION_SPECIFIQUE.md  (+294 more)
.vercel/: project.json
backup/: dashboard_view_golden_backup.py
base de donner/: BDD INST 2025.xlsx  ~$BDD INST 2025.xlsx
debug/: debug_gui.py  debug_logging.py  debug_metadata.py  debug_visibility_deep.py  diagnostic_viewmanager.py
docs/: DESIGN_GUIDE_2025.md  ETAPE_5_UX_AMELIORATIONS.md  RELEASE_NOTES_v1.1.0-beta.md  USER_GUIDE_v1.1.0-beta.md  conf.py  technical_guide.rst
html/: Analyse et Recommandations pour la Modernisation de l'Interface CHNeoWave.md  CHNeoWave - Interface Moderne.md  index.html  styles.css
i-prototype-tailwind/: ANALYSE_COMPLETE_INTERFACE.md  CORRECTIONS_ERREURS_FINALES.md  CORRECTION_ERREURS_JS.md  CORRECTION_FINALE_JS.md  CORRECTION_SYNTAXE_FINALE.md  MISSION_COMPLETION_REPORT.md  RAPPORT_CORRECTION_THEME_FINAL.md  RAPPORT_SYNCHRONISATION_DIMENSIONNEMENT.md  RESOLUTION_POSTCSS_FINALE.md  RESTRUCTURATION_PROFESSIONNELLE_FINALE.md  THEME_SYSTEM_GUIDE.md  index.html  integration_test_report_20250814_151208.md  migrate-theme-system.js  package-lock.json  package.json  tailwind.config.ts  test-system.html  tsconfig.json  vite.config.ts
interfaces_backup/: RAPPORT_SAUVEGARDE.md
logs/: diagnostic_output.txt  diagnostic_output_after_fix.txt  smoke_test_report_20250720_100018.json  smoke_test_report_20250720_101237.json  smoke_test_report_20250720_112943.json  smoke_test_report_20250720_124407.json
mcc_daq_real/: app.py  (+4 more)
(+615 files in other folders)
